--- a/index.html
+++ b/index.html
@@ -1,12 +1,41 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>index</title>
+    <meta charset="utf-8">
+    <title>Défi Portrait chinois - Jeu vidéo</title>
+    <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Ranchers&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Texturina:wght@200&display=swap" rel="stylesheet">
 </head>
+
 <body>
-    Hello World
+
+    <div class="box1">
+        <div class="container">
+            <p class="txt1">
+                <u><b>Airbag</b></u> :<br>Si j'étais <b>un Jeu vidéo</b> <br> Je serais ...
+            </p>
+        </div>
+    </div>
+    <div class="fixed-bg bg-1">
+        <img src="media/RYTHME_HEAVEN.png" alt="Logo Rythme Heaven">
+    </div>
+    <div class="box2">
+        <div class="container">
+            <p class="txt2">
+                <u><b>Kyrlaw</b></u> :<br>Si j'étais <b>un Jeu vidéo</b> <br> Je serais ...
+            </p>
+        </div>
+    </div>
+    <div class="fixed-bg bg-2">
+        <img src="media/Hearthstone.png" alt="Logo Hearthstone">
+    </div>
+    <div class="box3">
+        <div class="container">
+            <a href=""><img src="media/test.png" alt="Page Suivante"></a>
+        </div>
+    </div>
 </body>
+
 </html>
